Fix bug that prevented "jumped-to" row from being highlighted

--- a/scoring/static/scoring/scss/scoring-table.scss
+++ b/scoring/static/scoring/scss/scoring-table.scss
@@ -275,7 +275,7 @@ tbody th.council-name {
 
     .highlight {
         th, td {
-            background: rgba($color-scorecard-yellow, 0.5);
+            background: rgba($color-scorecard-yellow, 0.5) !important;
         }
     }
 
